--- a/fabricacion.html
+++ b/fabricacion.html
@@ -136,7 +136,7 @@
         <!-- Fabricación de Barandas o Escaleras -->
         <div class="flex flex-col md:flex-row items-center mt-8 bg-gray-200 p-6 rounded-lg shadow-lg">
             <div class="relative w-full md:w-1/2 group">
-                <a href="barandas.html">
+                <a href="escaleras.html">
                     <img src="img/escalera1.jpg" alt="Fabricación de Barandas o Escaleras" class="w-full rounded-lg shadow-md">
                     <span class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 text-white text-2xl font-bold opacity-0 group-hover:opacity-100 transition-opacity">Ver más</span>
                 </a>
