--- a/techos.html
+++ b/techos.html
@@ -45,7 +45,7 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a href="nosotros.html" class="nav-link hover:underline block px-4 py-2 rounded-lg hover:bg-gray-700">Nosotros</a></li>
-                <li class="nav-item"><a href="contacto.html" class="nav-link hover:underline block px-4 py-2 rounded-lg hover:bg-gray-700">Contacto</a></li>
+                <li class="nav-item"><a href="contacto.html" class="nav-link hover:underline block px-4 py-2 rounded-lg hover:bg-gray-700">Contactos</a></li>
             </ul>
         </div>
     </nav>
