terminando escaleras.html, techos y nontaje-desmontaje y algunos cambios extras

--- a/puentes.html
+++ b/puentes.html
@@ -59,7 +59,7 @@
 
 
    <!-- Contenido principal -->
-<section class="container mx-auto py-8 px-4" style="background-color: #056b7f; color: white;">
+<section class="container mx-auto py-8 px-4" style="background-color: teal;" color: white;">
     <h1 class="text-3xl font-bold mb-4 text-center" style="color: coral;">Fabricacion de todo tipo de servicios para puentes</h1>
     <p class="text-lg text-white mb-4">En J&K Machinery EIRL, somos expertos en la fabricación de puentes metálicos diseñados para soportar grandes cargas y garantizar seguridad. Utilizamos los mejores materiales y técnicas avanzadas para ofrecer estructuras resistentes y duraderas.</p>
 
@@ -108,7 +108,7 @@
 
 
 <!-- Sección de Fabricación y Montaje de Puentes -->
-<section class="container mx-auto py-8 px-4" style="background-color: #056b7f; color: white;">
+<section class="container mx-auto py-8 px-4" style="background-color: teal; color: white;">
     <div class="flex flex-wrap justify-between">
         <!-- Fase de Fabricación -->
         <div class="w-full md:w-1/2 pr-4">
