--- a/fabricacion.html
+++ b/fabricacion.html
@@ -186,7 +186,7 @@
         <!-- Otros Trabajos de Metal -->
         <div class="flex flex-col md:flex-row items-center mt-8 bg-gray-100 p-6 rounded-lg shadow-lg">
             <div class="relative w-full md:w-1/2 group">
-                <a href="otros.html">
+                <a href="montaje-desmontaje.html">
                     <img src="https://t3.ftcdn.net/jpg/00/81/13/94/360_F_81139483_VJsR2HHObKAyX1jWfxMpZXGCZ9fPtmFF.jpg" alt="Otros Trabajos de Metal" class="w-full rounded-lg shadow-md">
                     <span class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 text-white text-2xl font-bold opacity-0 group-hover:opacity-100 transition-opacity">Ver más</span>
                 </a>
