--- a/tanques.html
+++ b/tanques.html
@@ -78,8 +78,8 @@
 </section>
 
 <!-- Sección de Tanques de Almacenamiento -->
-<section class="container mx-auto py-8 px-4" style="background-color: #d5e0ea; font-family: 'Arial', sans-serif;">
-    <h1 class="text-3xl font-bold mb-4 text-center text-blue-600">Tanques agitadores y de procesos</h1>
+<section class="container mx-auto py-8 px-4" style="background-color: teal; font-family: 'Arial', sans-serif;">
+    <h1 class="text-3xl font-bold mb-4 text-center text-white">Tanques agitadores y de procesos</h1>
     
     <div class="flex justify-center items-center space-x-4 mb-4">
         <!-- Foto 1 -->
@@ -94,7 +94,7 @@
 
     <!-- Descripción -->
     <div class="mt-4 text-center">
-        <p class="text-base text-gray-700">Nuestros tanques agitadores y de procesos están diseñados para proporcionar soluciones 
+        <p class="text-base text-white">Nuestros tanques agitadores y de procesos están diseñados para proporcionar soluciones 
             eficientes y fiables para una amplia gama de aplicaciones industriales. Nos comprometemos a ofrecer productos de alta calidad 
             que cumplan con las expectativas de nuestros clientes y las normativas internacionales..</p>
     </div>
@@ -114,7 +114,7 @@
 </section>
 
 <!-- Contenido de textos Ultimo-->
-<section class="container mx-auto py-8 px-4" style="background-color: #056b7f; color: white;">
+<section class="container mx-auto py-8 px-4" style="background-color: teal; color: white;">
     <h1 class="text-3xl font-bold mb-8 text-center">Fabricación de Tanques</h1>
 
     <h3 class="text-2xl font-bold mb-16 text-center " style="color: coral;">Adecuados para aplicaciones industriales, comerciales y residenciales.</h3>
