--- a/contacto.html
+++ b/contacto.html
@@ -52,14 +52,55 @@
         </div>
     </nav>
 
-    <!-- Slider -->
 
-    <!-- Contenido principal -->
-    <section class="container mx-auto py-8 px-4">
-        <h1 class="text-3xl font-bold mb-4">Contactos</h1>
-        <p>Descripción detallada de los servicios de fabricación...</p>
-        <!-- Aquí puedes añadir más contenido e imágenes sobre el servicio de fabricación -->
-    </section>
+        <!-- Main Content -->
+        <main class="container mx-auto py-12 px-4">
+            <!-- Contact Information -->
+            <section class="bg-white shadow-lg rounded-lg p-8 mb-12">
+                <h2 class="text-3xl font-semibold text-blue-600 mb-6 text-center">Información de Contacto</h2>
+                <p class="text-lg text-gray-700 leading-relaxed mb-6 text-center">
+                    Estamos aquí para ayudarte. Contáctanos a través de los siguientes medios:
+                </p>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="text-center md:text-left">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Dirección:</h3>
+                        <p class="text-gray-600">Av. Principal #123, Ciudad, País</p>
+                    </div>
+                    <div class="text-center md:text-left">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Teléfono:</h3>
+                        <p class="text-gray-600">+51 987 654 321</p>
+                    </div>
+                    <div class="text-center md:text-left">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Correo Electrónico:</h3>
+                        <p class="text-gray-600">contacto@jk-machinery.com</p>
+                    </div>
+                    <div class="text-center md:text-left">
+                        <h3 class="text-xl font-bold text-gray-800 mb-2">Horario de Atención:</h3>
+                        <p class="text-gray-600">Lunes a Viernes: 9:00 AM - 6:00 PM</p>
+                    </div>
+                </div>
+            </section>
+    
+        <!-- Contact Form -->
+        <form id="contactForm" class="space-y-4" action="/contact" method="POST">
+            <div>
+                <label for="nombre" class="block text-sm font-bold text-gray-700 mb-2">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required class="w-full p-3 border rounded-lg shadow-sm focus:outline-none focus:border-teal-500">
+            </div>
+            <div>
+                <label for="email" class="block text-sm font-bold text-gray-700 mb-2">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" placeholder="Tu correo" required class="w-full p-3 border rounded-lg shadow-sm focus:outline-none focus:border-teal-500">
+            </div>
+            <div>
+                <label for="mensaje" class="block text-sm font-bold text-gray-700 mb-2">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" placeholder="Tu mensaje" required class="w-full p-3 border rounded-lg shadow-sm focus:outline-none focus:border-teal-500" rows="4"></textarea>
+            </div>
+            <div>
+                <button type="submit" class="w-full bg-teal-500 text-white font-bold py-3 rounded-lg shadow-md hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-opacity-50">Enviar</button>
+            </div>
+        </form>
+            
+        </main>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
@@ -101,5 +142,7 @@
     <!-- Scripts -->
     <script src="js/menu.js"></script>
     <script src="js/slider.js"></script>
+    <script src="js/contacto.js"></script>
+
 </body>
 </html>
